--- a/themes/base_files/scss/_tiki-tabs_and_tables.scss
+++ b/themes/base_files/scss/_tiki-tabs_and_tables.scss
@@ -134,7 +134,7 @@ td.url{
 	}
 
 	.tiki #col1 .table-responsive {
-		.form-check-input { position: static; margin-left: 0; }
+		.form-check-input { position: static; }
 		&.large-table {
 			.table:not(.tablesorter) {
 				thead, tbody {
@@ -143,7 +143,11 @@ td.url{
 						top: -9999px;
 						left: -9999px;
 					}
-					th.selectall { border: none; }
+					th.selectall {
+						padding-top: 0.35rem;
+						padding-bottom: 0.69rem;
+						border: none;
+					}
 				}
 
 				thead tr {
@@ -180,7 +184,7 @@ td.url{
 
 					> tr.active { display: none; }
 					td.checkall { position: absolute; }
-					td.checkmargin { margin-left: 40px; }
+					td.checkmargin { margin-left: 30px; }
 					.header { display: block !important; font-weight: bold; }
 					.hidecell { display: none; }
 					.float-right { float: none !important; }
